src/mobius.esc/escjava/tags/escjava-2-0a8/ESCTools/Javafe/test/javafe/test/fe/test19/ImplementsClass.java
package foo.bar;

class B {}

interface Neutral1 {}
interface Neutral2 {}

interface A extends Neutral1, B, Neutral2 {}		// error
